# erai

./: README.md
fine-tuning/: LLM Fine-tuning.ipynb  sLLM Fine-tuning.ipynb
server/: .gitignore  pyproject.toml
server/config/: settings.py  urls.py
server/hackerthon/: pyproject.toml
server/hackerthon/config/: urls.py
server/hackerthon/userdata/: admin.py  views.py
server/hackerthon/userdata/api/: data_crawling.py
server/hackerthon/userdata/migrations/: 0001_initial.py
server/hackerthon/users/: views.py
server/modelAi/: model_predict.py  urls.py  views.py
server/userdata/: models.py  serializers.py  urls.py
server/userdata/api/: data_crawling.py
server/users/: urls.py
web/: .eslintrc.json  .gitignore  .prettierrc.json  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
web/api/: user.ts
web/src/api/: prompt.ts  user.ts
web/src/app/: layout.tsx  page.tsx
web/src/component/: crawlingInput.tsx  header.tsx  icon.tsx
web/src/component/pages/: crawling.tsx  prompt.tsx
web/src/types/: user.ts
